packages/audiocpp/src/include/audiocpp_ffi.h

/* Bump the minor on additive changes, the major on breaking ones. The Dart
 * package checks the major matches what its bindings were generated against. */
#define AUDIOCPP_FFI_ABI_VERSION_MAJOR 1
#define AUDIOCPP_FFI_ABI_VERSION_MINOR 3
/* -------------------------------------------------------------------------- */
/* Status codes                                                               */
/* -------------------------------------------------------------------------- */

typedef enum audiocpp_status {
    AUDIOCPP_OK = 0,
    /* A required argument was NULL, or an array length did not match. */
    AUDIOCPP_ERROR_INVALID_ARGUMENT = 1,
    /* The model directory is missing, unreadable, or has no matching loader. */
    AUDIOCPP_ERROR_MODEL_LOAD = 2,
    /* The loaded model does not support the requested task/mode combination. */
    AUDIOCPP_ERROR_SESSION_CREATE = 3,
    /* Inference started but failed. */
    AUDIOCPP_ERROR_RUN = 4,
    /* The session completed but produced no audio output. */
    AUDIOCPP_ERROR_NO_AUDIO_OUTPUT = 5,
    /* Filesystem read/write failed. */
    AUDIOCPP_ERROR_IO = 6,
    /* The run was stopped by audiocpp_cancel_request(). Not a failure: the
     * caller asked for it, and the session stays usable for the next run. */
    AUDIOCPP_CANCELLED = 7,
    /* An exception escaped that we could not classify. */
    AUDIOCPP_ERROR_UNKNOWN = 99
} audiocpp_status;
/* -------------------------------------------------------------------------- */
/* Enums mirroring engine::core::BackendType / engine::runtime::VoiceTaskKind  */
/* -------------------------------------------------------------------------- */

typedef enum audiocpp_backend {
    AUDIOCPP_BACKEND_CPU = 0,
    AUDIOCPP_BACKEND_CUDA = 1,
    AUDIOCPP_BACKEND_HIP = 2,
    AUDIOCPP_BACKEND_VULKAN = 3,
    AUDIOCPP_BACKEND_METAL = 4,
    AUDIOCPP_BACKEND_BEST_AVAILABLE = 5
} audiocpp_backend;
typedef enum audiocpp_task {
    AUDIOCPP_TASK_VAD = 0,
    AUDIOCPP_TASK_ASR = 1,
    AUDIOCPP_TASK_DIARIZATION = 2,
    AUDIOCPP_TASK_SOURCE_SEPARATION = 3,
    AUDIOCPP_TASK_AUDIO_GENERATION = 4,
    AUDIOCPP_TASK_TTS = 5,
    AUDIOCPP_TASK_VOICE_CLONING = 6,
    AUDIOCPP_TASK_VOICE_CONVERSION = 7,
    AUDIOCPP_TASK_SPEECH_TO_SPEECH = 8,
    AUDIOCPP_TASK_ALIGNMENT = 9,
    AUDIOCPP_TASK_VOICE_DESIGN = 10,
    AUDIOCPP_TASK_SPEAKER_RECOGNITION = 11,
    AUDIOCPP_TASK_SVC = 12,
    AUDIOCPP_TASK_MIDI = 13
} audiocpp_task;
/* -------------------------------------------------------------------------- */
/* Opaque handles                                                             */
/* -------------------------------------------------------------------------- */

typedef struct audiocpp_model_t audiocpp_model;
typedef struct audiocpp_session_t audiocpp_session;
typedef struct audiocpp_audio_t audiocpp_audio;
/* -------------------------------------------------------------------------- */
/* Parameter structs                                                          */
/* -------------------------------------------------------------------------- */

/*
 * A flat key/value map: `keys` and `values` are parallel arrays of `count`
 * UTF-8 strings. Pass count == 0 with NULL arrays for "no options".
 *
 * These pass through to audio.cpp's --load-option / --session-option /
 * --request-option maps verbatim, which is why they stay untyped here: the
 * option set is per model family and evolves upstream. The Dart package layers
 * typed request builders (e.g. MiniMaxMusic3Request) on top.
 */
typedef struct audiocpp_options {
    const char * const * keys;
    const char * const * values;
    int32_t count;
} audiocpp_options;
typedef struct audiocpp_model_params {
    /* Required. Directory holding the model package, e.g. MiniMax-Music3-GGUF. */
    const char * model_path;
    /* Optional. Family hint, e.g. "minimax_music3". Without it the registry has
     * to infer the family from the package contents. */
    const char * family;
    /* Optional. Explicit path to a model_specs/<family>.json. Needed when the
     * library was not built with AUDIOCPP_DEPLOYMENT_BUILD=ON and no
     * model_specs/ directory sits near the model or the process cwd. */
    const char * model_spec_override;
    /* Optional. Select a named config/weight asset inside the package. */
    const char * config_id;
    const char * weight_id;
    audiocpp_options load_options;
} audiocpp_model_params;
typedef struct audiocpp_session_params {
    int32_t task;     /* audiocpp_task */
    int32_t backend;  /* audiocpp_backend */
    /* Device index within the chosen backend's ggml registry. */
    int32_t device;
    /* Must be > 0. */
    int32_t threads;
    audiocpp_options session_options;
} audiocpp_session_params;
typedef struct audiocpp_request {
    /* Optional. Primary text input. For MiniMax Music 3 this is the style
     * caption; the lyrics travel in request_options under "lyrics". */
    const char * text;
    /* Optional. BCP-47-ish language tag passed alongside `text`. */
    const char * language;
    audiocpp_options request_options;
} audiocpp_request;
/*
 * Asks the running generation to stop. Returns AUDIOCPP_OK always; there is
 * nothing to fail at, and no way to know from here whether a run is in flight.
 *
 * Deliberately takes no session. The point of this call is that it is safe from
 * a thread other than the one blocked inside audiocpp_session_run -- so it
 * touches no handle, only a process-wide flag. Passing a session pointer would
 * invite exactly the concurrent handle access the rest of this ABI forbids.
 *
 * Consequently it applies to whichever run is in flight, which is sound only
 * because the engine runs one at a time. Should that ever change, this call
 * needs a run identity and this comment needs deleting.
 *
 * The flag is cleared when a run starts, so calling this with nothing running
 * does not stop the next one. The stopped run returns AUDIOCPP_CANCELLED, and
 * the session remains usable.
 *
 * Cancellation is honoured between units of work, not instantly: MiniMax Music
 * 3 checks per AR frame and per denoising step, both sub-second.
 */
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_cancel_request(void);
/* -------------------------------------------------------------------------- */
/* Progress                                                                   */
/* -------------------------------------------------------------------------- */

/*
 * Which stage of a generation is running.
 *
 * Crosses the ABI as int32_t, like every other enum here. The phases are the
 * pipeline's own and are not interchangeable: they advance in different units
 * and cost wildly different amounts per unit, so a caller wanting one overall
 * fraction has to weight them by measured cost rather than counting units.
 */
typedef enum audiocpp_progress_phase {
    AUDIOCPP_PHASE_UNKNOWN = 0,
    /* Autoregressive frame generation. Advances one audio frame at a time. */
    AUDIOCPP_PHASE_AR = 1,
    /* Diffusion denoising. Advances one denoiser evaluation at a time, and is
     * the bulk of a run -- roughly three quarters of it at 30 steps. */
    AUDIOCPP_PHASE_FLOW = 2,
    /* Waveform synthesis. Advances one chunk at a time. */
    AUDIOCPP_PHASE_VOCODER = 3,
    /* Stitching and normalising the finished audio. */
    AUDIOCPP_PHASE_FINALIZING = 4
} audiocpp_progress_phase;
typedef struct audiocpp_progress {
    int32_t phase; /* audiocpp_progress_phase */
    /* Identifies the run this reading came from; a fresh run gets a new one.
     * A caller polling asynchronously must ignore a reading whose serial is not
     * the run it is displaying, or it will render the tail of the previous run
     * as the opening of this one. */
    int32_t run_serial;
    /* Units completed out of the phase's total. Units are per-phase and not
     * comparable across phases. AUDIOCPP_PHASE_AR's total is an upper bound --
     * the model can stop early -- so that phase can end before done reaches it. */
    int64_t done;
    int64_t total;
    /* Wall time since this phase began, which is what a rate has to be measured
     * against. Includes any time the run spent paused. */
    int64_t phase_elapsed_ms;
} audiocpp_progress;
/*
 * Borrowed pointer to the interleaved float samples. Valid until the audio
 * handle is freed. NULL when the handle is NULL or holds no samples.
 */
AUDIOCPP_API const float * audiocpp_audio_samples(const audiocpp_audio * audio);
/*
 * Convenience: encode to a 16-bit PCM WAV file at `path`, using audio.cpp's own
 * writer. Saves the Dart side from reimplementing WAV framing, and keeps large
 * buffers out of the Dart heap.
 */
AUDIOCPP_API int32_t /* audiocpp_status */ audiocpp_audio_write_wav(
    const audiocpp_audio * audio,
    const char * path);