packages/audiocpp/lib/src/ffi/audiocpp_bindings.g.dart


  /// Borrowed pointer to the interleaved float samples. Valid until the audio
  /// handle is freed. NULL when the handle is NULL or holds no samples.
  ffi.Pointer<ffi.Float> audiocpp_audio_samples(
    ffi.Pointer<audiocpp_audio> audio,
  ) {
    return _audiocpp_audio_samples(audio);
  }

  late final _audiocpp_audio_samplesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Float> Function(ffi.Pointer<audiocpp_audio>)
        >
      >('audiocpp_audio_samples');
  late final _audiocpp_audio_samples = _audiocpp_audio_samplesPtr
      .asFunction<
        ffi.Pointer<ffi.Float> Function(ffi.Pointer<audiocpp_audio>)
      >();

  int audiocpp_audio_write_wav(
    ffi.Pointer<audiocpp_audio> audio,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _audiocpp_audio_write_wav(audio, path);
  }

  late final _audiocpp_audio_write_wavPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<audiocpp_audio>, ffi.Pointer<ffi.Char>)
        >
      >('audiocpp_audio_write_wav');
  late final _audiocpp_audio_write_wav = _audiocpp_audio_write_wavPtr
      .asFunction<
        int Function(ffi.Pointer<audiocpp_audio>, ffi.Pointer<ffi.Char>)
      >();
}

/// -------------------------------------------------------------------------- */
/// /* Status codes                                                               */
/// /* --------------------------------------------------------------------------
enum audiocpp_status {
  AUDIOCPP_OK(0),

  /// A required argument was NULL, or an array length did not match.
  AUDIOCPP_ERROR_INVALID_ARGUMENT(1),

  /// The model directory is missing, unreadable, or has no matching loader.
  AUDIOCPP_ERROR_MODEL_LOAD(2),

  /// The loaded model does not support the requested task/mode combination.
  AUDIOCPP_ERROR_SESSION_CREATE(3),

  /// Inference started but failed.
  AUDIOCPP_ERROR_RUN(4),

  /// The session completed but produced no audio output.
  AUDIOCPP_ERROR_NO_AUDIO_OUTPUT(5),

  /// Filesystem read/write failed.
  AUDIOCPP_ERROR_IO(6),

  /// The run was stopped by audiocpp_cancel_request(). Not a failure: the
  /// caller asked for it, and the session stays usable for the next run.
  AUDIOCPP_CANCELLED(7),

  /// An exception escaped that we could not classify.
  AUDIOCPP_ERROR_UNKNOWN(99);

  final int value;
  const audiocpp_status(this.value);

  static audiocpp_status fromValue(int value) => switch (value) {
    0 => AUDIOCPP_OK,
    1 => AUDIOCPP_ERROR_INVALID_ARGUMENT,
    2 => AUDIOCPP_ERROR_MODEL_LOAD,
    3 => AUDIOCPP_ERROR_SESSION_CREATE,
    4 => AUDIOCPP_ERROR_RUN,
    5 => AUDIOCPP_ERROR_NO_AUDIO_OUTPUT,
    6 => AUDIOCPP_ERROR_IO,
    7 => AUDIOCPP_CANCELLED,
    99 => AUDIOCPP_ERROR_UNKNOWN,
    _ => throw ArgumentError('Unknown value for audiocpp_status: $value'),
  };
}

/// -------------------------------------------------------------------------- */
/// /* Enums mirroring engine::core::BackendType / engine::runtime::VoiceTaskKind  */
/// /* --------------------------------------------------------------------------
enum audiocpp_backend {
  AUDIOCPP_BACKEND_CPU(0),
  AUDIOCPP_BACKEND_CUDA(1),
  AUDIOCPP_BACKEND_HIP(2),
  AUDIOCPP_BACKEND_VULKAN(3),
  AUDIOCPP_BACKEND_METAL(4),
  AUDIOCPP_BACKEND_BEST_AVAILABLE(5);

  final int value;
  const audiocpp_backend(this.value);

  static audiocpp_backend fromValue(int value) => switch (value) {
    0 => AUDIOCPP_BACKEND_CPU,
    1 => AUDIOCPP_BACKEND_CUDA,
    2 => AUDIOCPP_BACKEND_HIP,
    3 => AUDIOCPP_BACKEND_VULKAN,
    4 => AUDIOCPP_BACKEND_METAL,
    5 => AUDIOCPP_BACKEND_BEST_AVAILABLE,
    _ => throw ArgumentError('Unknown value for audiocpp_backend: $value'),
  };
}

enum audiocpp_task {
  AUDIOCPP_TASK_VAD(0),
  AUDIOCPP_TASK_ASR(1),
  AUDIOCPP_TASK_DIARIZATION(2),
  AUDIOCPP_TASK_SOURCE_SEPARATION(3),
  AUDIOCPP_TASK_AUDIO_GENERATION(4),
  AUDIOCPP_TASK_TTS(5),
  AUDIOCPP_TASK_VOICE_CLONING(6),
  AUDIOCPP_TASK_VOICE_CONVERSION(7),
  AUDIOCPP_TASK_SPEECH_TO_SPEECH(8),
  AUDIOCPP_TASK_ALIGNMENT(9),
  AUDIOCPP_TASK_VOICE_DESIGN(10),
  AUDIOCPP_TASK_SPEAKER_RECOGNITION(11),
  AUDIOCPP_TASK_SVC(12),
  AUDIOCPP_TASK_MIDI(13);

  final int value;
  const audiocpp_task(this.value);

  static audiocpp_task fromValue(int value) => switch (value) {
    0 => AUDIOCPP_TASK_VAD,
    1 => AUDIOCPP_TASK_ASR,
    2 => AUDIOCPP_TASK_DIARIZATION,
    3 => AUDIOCPP_TASK_SOURCE_SEPARATION,
    4 => AUDIOCPP_TASK_AUDIO_GENERATION,
    5 => AUDIOCPP_TASK_TTS,
    6 => AUDIOCPP_TASK_VOICE_CLONING,
    7 => AUDIOCPP_TASK_VOICE_CONVERSION,
    8 => AUDIOCPP_TASK_SPEECH_TO_SPEECH,
    9 => AUDIOCPP_TASK_ALIGNMENT,
    10 => AUDIOCPP_TASK_VOICE_DESIGN,
    11 => AUDIOCPP_TASK_SPEAKER_RECOGNITION,
    12 => AUDIOCPP_TASK_SVC,
    13 => AUDIOCPP_TASK_MIDI,
    _ => throw ArgumentError('Unknown value for audiocpp_task: $value'),
  };
}

final class audiocpp_model_t extends ffi.Opaque {}

/// -------------------------------------------------------------------------- */
/// /* Opaque handles                                                             */
/// /* --------------------------------------------------------------------------
typedef audiocpp_model = audiocpp_model_t;

final class audiocpp_session_t extends ffi.Opaque {}

typedef audiocpp_session = audiocpp_session_t;

final class audiocpp_audio_t extends ffi.Opaque {}

typedef audiocpp_audio = audiocpp_audio_t;

/// A flat key/value map: `keys` and `values` are parallel arrays of `count`
/// UTF-8 strings. Pass count == 0 with NULL arrays for "no options".
///
/// These pass through to audio.cpp's --load-option / --session-option /
/// --request-option maps verbatim, which is why they stay untyped here: the
/// option set is per model family and evolves upstream. The Dart package layers
/// typed request builders (e.g. MiniMaxMusic3Request) on top.
final class audiocpp_options extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<ffi.Char>> keys;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> values;

  @ffi.Int32()
  external int count;
}

final class audiocpp_model_params extends ffi.Struct {
  /// Required. Directory holding the model package, e.g. MiniMax-Music3-GGUF.
  external ffi.Pointer<ffi.Char> model_path;

  /// Optional. Family hint, e.g. "minimax_music3". Without it the registry has
  /// to infer the family from the package contents.
  external ffi.Pointer<ffi.Char> family;

  /// Optional. Explicit path to a model_specs/<family>.json. Needed when the
  /// library was not built with AUDIOCPP_DEPLOYMENT_BUILD=ON and no
  /// model_specs/ directory sits near the model or the process cwd.
  external ffi.Pointer<ffi.Char> model_spec_override;

  /// Optional. Select a named config/weight asset inside the package.
  external ffi.Pointer<ffi.Char> config_id;

  external ffi.Pointer<ffi.Char> weight_id;

  external audiocpp_options load_options;
}

final class audiocpp_session_params extends ffi.Struct {
  /// audiocpp_task
  @ffi.Int32()
  external int task;

  /// audiocpp_backend
  @ffi.Int32()
  external int backend;

  /// Device index within the chosen backend's ggml registry.
  @ffi.Int32()
  external int device;

  /// Must be > 0.
  @ffi.Int32()
  external int threads;

  external audiocpp_options session_options;
}

final class audiocpp_request extends ffi.Struct {
  /// Optional. Primary text input. For MiniMax Music 3 this is the style
  /// caption; the lyrics travel in request_options under "lyrics".
  external ffi.Pointer<ffi.Char> text;

  /// Optional. BCP-47-ish language tag passed alongside `text`.
  external ffi.Pointer<ffi.Char> language;

  external audiocpp_options request_options;
}

/// Which stage of a generation is running.
///
/// Crosses the ABI as int32_t, like every other enum here. The phases are the
/// pipeline's own and are not interchangeable: they advance in different units
/// and cost wildly different amounts per unit, so a caller wanting one overall
/// fraction has to weight them by measured cost rather than counting units.
enum audiocpp_progress_phase {
  AUDIOCPP_PHASE_UNKNOWN(0),

  /// Autoregressive frame generation. Advances one audio frame at a time.
  AUDIOCPP_PHASE_AR(1),

  /// Diffusion denoising. Advances one denoiser evaluation at a time, and is
  /// the bulk of a run -- roughly three quarters of it at 30 steps.
  AUDIOCPP_PHASE_FLOW(2),

  /// Waveform synthesis. Advances one chunk at a time.
  AUDIOCPP_PHASE_VOCODER(3),

  /// Stitching and normalising the finished audio.
  AUDIOCPP_PHASE_FINALIZING(4);

  final int value;
  const audiocpp_progress_phase(this.value);

  static audiocpp_progress_phase fromValue(int value) => switch (value) {
    0 => AUDIOCPP_PHASE_UNKNOWN,
    1 => AUDIOCPP_PHASE_AR,
    2 => AUDIOCPP_PHASE_FLOW,
    3 => AUDIOCPP_PHASE_VOCODER,
    4 => AUDIOCPP_PHASE_FINALIZING,
    _ => throw ArgumentError(
      'Unknown value for audiocpp_progress_phase: $value',
    ),
  };
}

final class audiocpp_progress extends ffi.Struct {
  /// audiocpp_progress_phase
  @ffi.Int32()
  external int phase;

  /// Identifies the run this reading came from; a fresh run gets a new one.
  /// A caller polling asynchronously must ignore a reading whose serial is not
  /// the run it is displaying, or it will render the tail of the previous run
  /// as the opening of this one.
  @ffi.Int32()
  external int run_serial;

  /// Units completed out of the phase's total. Units are per-phase and not
  /// comparable across phases. AUDIOCPP_PHASE_AR's total is an upper bound --
  /// the model can stop early -- so that phase can end before done reaches it.
  @ffi.Int64()
  external int done;

  @ffi.Int64()
  external int total;

  /// Wall time since this phase began, which is what a rate has to be measured
  /// against. Includes any time the run spent paused.
  @ffi.Int64()
  external int phase_elapsed_ms;
}

const int AUDIOCPP_FFI_ABI_VERSION_MAJOR = 1;

const int AUDIOCPP_FFI_ABI_VERSION_MINOR = 3;
